infrastructure/base/gateway-system/gateway.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gateway-system
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: platform
  namespace: gateway-system
spec:
  gatewayClassName: cilium

  listeners:
    - name: http
      protocol: HTTP
      port: 80

      allowedRoutes:
        namespaces:
          from: All

    - name: https
      protocol: HTTPS
      port: 443

      tls:
        mode: Terminate
        certificateRefs:
          - group: ""
            kind: Secret
            name: platform-wildcard-tls

      allowedRoutes:
        namespaces:
          from: All
