infrastructure/base/gateway-system/http-redirect.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: redirect-http-to-https
  namespace: gateway-system
spec:
  parentRefs:
    - name: platform
      namespace: gateway-system
      sectionName: http

  hostnames:
    - "*.internal"

  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
